--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -10,6 +10,7 @@
   top: 90px;
   right: 40px;
   z-index: 5;
+  overflow: scroll;
 
   .empty-message {
     font-size: 18px;
@@ -20,10 +21,13 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
+
   }
 
   button {
     margin-top: auto;
+    font-size: 11px;
   }
 }
+
+
