--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -4,3 +4,9 @@
       column-gap: 20px;
       row-gap: 50px;
 }
+
+.category-title {
+      font-size: 30px;
+      margin-bottom: 28px;
+      text-align: center;
+}
